--- a/index.html
+++ b/index.html
@@ -35,23 +35,67 @@
 
         <div class="menuLeft">
             <!-- Temporizador -->
-            <div class="timer">TIEMPO RESTANTE
+            <div class="menuTimer">
+                <div class="menuTimerTitle">TIEMPO RESTANTE</div>
                 <div class="currentTime"></div>
             </div>
             <!-- ITEMS -->
-            <div>1</div>
+            <div class="menuPowers">
+                <div class="menuPowersTitle">POWERS</div>
+                <div class="playerPowers">x</div>
+                <div class="playerPowers">x</div>
+            </div>
             <!-- Puntuacion-->
-            <div>1</div>
+            <div class="menuScore">
+                <div class="mnScorePoints">
+                    <div class="mnScoreTitle">PUNTOS</div>
+                    <div id="ScoreValue1" class="mnScoreValue">250</div>
+                </div>
+                <div class="mnScoreItems">
+                    <div class="mnScoreTitle">OBJETOS ENCONTRADOS</div>
+                    <div id="ScoreValue2" class="mnScoreValue">250</div>
+                </div>
+                <div class="mnScoreTotal">
+                    <div class="mnScoreTitle"> TOTAL OBJETOS</div>
+                    <div id="ScoreValue3" class="mnScoreValue">250</div>
+                </div>
+
+            </div>
         </div>
         <div class="mainBlock">
             <!-- Tablero -->
             <div id="myBoard" class="board"></div>
             <!-- Energia Restante -->
-            <div>1</div>
+            <div class="playerEnergy">
+                <div class="plyrNrgTitle">GAS RESTANTE</div>
+                <div class="plyrNrgBarBlock">
+                    <div class="nrgBarBackground nrg-moved">
+                        <div id="nrgBarID" class="nrg-bar"></div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="menuRight">
-            <div>1</div>
-            <div>1</div>
+            <!-- Items-->
+            <div class="menuItems">
+                <div class="menuItemsTitle">OBJETOS DE PARTIDA</div>
+                <div id="Itemid1" class="menuItemsItem">z</div>
+                <div id="Itemid2" class="menuItemsItem">z</div>
+                <div id="Itemid3" class="menuItemsItem">z</div>
+                <div id="Itemid4" class="menuItemsItem">z</div>
+                <div id="Itemid5" class="menuItemsItem">z</div>
+                <div id="Itemid6" class="menuItemsItem">z</div>
+            </div>
+            <!-- Museo -->
+            <div class="menuMuseum">
+                <div class="menuMuseumTitle">MUSEO</div>
+                <div id="MuseumId1" class="menuMuseumItem">x</div>
+                <div id="MuseumId2" class="menuMuseumItem">x</div>
+                <div id="MuseumId3" class="menuMuseumItem">x</div>
+                <div id="MuseumId4" class="menuMuseumItem">x</div>
+                <div id="MuseumId5" class="menuMuseumItem">x</div>
+                <div id="MuseumId6" class="menuMuseumItem">x</div>
+            </div>
         </div>
 
     </div>
