new image based

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="es">
 
 <head>
     <!-- Titulo del site -->
-    <title>Dig-Git | A Excavar</title>
+    <title>Dig-Git | Game</title>
 
     <!-- las etiquetas meta son para ayudar a los motores de busqueda
         y estipular algunas reglas para mostrar en el navegador
