new random system

--- a/index.html
+++ b/index.html
@@ -43,26 +43,20 @@
                 <div class="currentTime"></div>
             </div>
             <!-- ITEMS -->
-            <div class="menuPowers">
-                <div class="menuPowersTitle">POWERS</div>
-                <div class="playerPowers" id="PowerFuel"></div>
-                <div class="playerPowers" id="PowerTime"></div>
+            <div class="mnPowers">
+                <div class="mnPowers-title">POWERS</div>
+                <div class="mnPowers-item" id="PowerFuel"></div>
+                <div class="mnPowers-item" id="PowerTime"></div>
             </div>
-            <!-- Puntuacion-->
-            <div class="menuScore">
-                <div class="mnScorePoints">
-                    <div class="mnScoreTitle">PUNTOS</div>
-                    <div id="ScoreValue1" class="mnScoreValue">250</div>
-                </div>
-                <div class="mnScoreItems">
-                    <div class="mnScoreTitle">OBJETOS ENCONTRADOS</div>
-                    <div id="ScoreValue2" class="mnScoreValue">250</div>
-                </div>
-                <div class="mnScoreTotal">
-                    <div class="mnScoreTitle"> TOTAL OBJETOS</div>
-                    <div id="ScoreValue3" class="mnScoreValue">250</div>
-                </div>
-
+            <!-- Items-->
+            <div class="mnObjetos">
+                <div class="mnObjetos-title">OBJETOS DE PARTIDA</div>
+                <div id="Itemid1" class="mnObjetos-item">z</div>
+                <div id="Itemid2" class="mnObjetos-item">z</div>
+                <div id="Itemid3" class="mnObjetos-item">z</div>
+                <div id="Itemid4" class="mnObjetos-item">z</div>
+                <div id="Itemid5" class="mnObjetos-item">z</div>
+                <div id="Itemid6" class="mnObjetos-item">z</div>
             </div>
         </div>
         <!-- bloque central -->
@@ -81,15 +75,20 @@
         </div>
         <!-- bloque derecho -->
         <div class="menuRight">
-            <!-- Items-->
-            <div class="menuItems">
-                <div class="menuItemsTitle">OBJETOS DE PARTIDA</div>
-                <div id="Itemid1" class="menuItemsItem">z</div>
-                <div id="Itemid2" class="menuItemsItem">z</div>
-                <div id="Itemid3" class="menuItemsItem">z</div>
-                <div id="Itemid4" class="menuItemsItem">z</div>
-                <div id="Itemid5" class="menuItemsItem">z</div>
-                <div id="Itemid6" class="menuItemsItem">z</div>
+            <!-- Puntuacion-->
+            <div class="menuScore">
+                <div class="mnScorePoints">
+                    <div class="mnScoreTitle">PUNTOS</div>
+                    <div id="ScoreValue1" class="mnScoreValue">250</div>
+                </div>
+                <div class="mnScoreItems">
+                    <div class="mnScoreTitle">OBJETOS ENCONTRADOS</div>
+                    <div id="ScoreValue2" class="mnScoreValue">250</div>
+                </div>
+                <div class="mnScoreTotal">
+                    <div class="mnScoreTitle"> TOTAL OBJETOS</div>
+                    <div id="ScoreValue3" class="mnScoreValue">250</div>
+                </div>
             </div>
             <!-- Museo -->
             <div class="menuMuseum">
